Done the projects

--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,7 @@
 		<input type="submit" value="Login"><br>
 
 	</form>
-	{% if worngpass %}
+	{% if wrongpass %}
 	<h4>Wrong Password. Try Again</h4>
 	{% endif %}
 	{% if not_reg_user %}
